--- a/assignment3/src/index.html
+++ b/assignment3/src/index.html
@@ -25,16 +25,17 @@
             font-style: Arial;
         }
         
-        .Left_liner{        /* 클래스를 선언할 때는 .을 붙여야함*/
-            margin-left:0; /* 왼쪽 여백을 삭제해 왼쪽에서부터 선이 시작될 수 있도록 설정 */
+        .Left_liner{        
+            margin-left:0; 
             width: 95%;
-            margin-bottom: 10px; /* 하단 여백 조정 */
+            margin-bottom: 10px; 
         }
 
-        p {
+        dd,p {
             width: 95%;
-            margin-top: 0; /* 상단 여백 제거 */
+            margin-top: 0; 
         }
+
 
 
 
@@ -86,6 +87,28 @@
         To compensate, people keep mechanical animals, known as "electric sheep". As Deckard hunts down the androids, he questions what it means to be human and the morality of his actions. 
         The story delves into the philosophical implications of artificial intelligence, asking whether empathy and emotions are exclusive to humans or if they can be programmed into machines.
     </p>
+    <br><br>
+
+    <h2>Symbolism of the protagonist Rick Deckard</h2>
+    <hr class="Left_liner">
+    <dl>
+        <dt><strong>Paradoxical Humanity</strong></dt>
+        <dd> As a Blade Runner tasked with "retiring" androids, Rick Deckard symbolizes existential questions about human identity. 
+            He grapples with the task of judging and eliminating non-human beings by human standards, leading to doubts about his own humanity.</dd>
+
+        <dt><strong>Ethical Reflection</strong></dt>
+        <dd> Deckard's story provides an exploration of ethical dilemmas and profound moral choices. By eliminating androids, 
+            Deckard confronts the contradictory nature of his role and his ethical responsibilities.</dd>
+
+        <dt><strong>Blurry Boundaries between Reality and Dream</strong></dt>
+        <dd> Deckard's narrative unfolds in a world where the boundaries between reality and dream are blurred. 
+            This challenges readers t question their own perceptions and understanding of reality.</dd>
+
+        <dt><strong>Meaning of Humanity</strong></dt>
+        <dd> Deckard raises questions about whether androids can experience emotions. 
+            His journey suggests the possibility that androids may possess emotions and consciousness comparable to humans.</dd>
+    </dl>
+
     <h2>Influence</h2>
     <hr class="Left_liner">
     <p>"Do Androids Dream of Electric Sheep?" has had a significant influence on both gaming 
@@ -95,21 +118,26 @@
             <div class="grid-item">
                 <img src="./image/BladeRunner.jpg" alt="Description of image 1">
                 <h3>Blade Runner 2049</h3>
-                <p>Author</p>
+                <p>Movie</p>
             </div>
             <div class="grid-item">
                 <img src="./image/DetroitBecomeHuman.jpg" alt="Description of image 2">
                 <h3>Detroit: Become Human</h3>
-                <p>Author</p>
+                <p>Game</p>
             </div>
             <div class="grid-item">
                 <img src="./image/ex_machina (1).jpg" alt="Description of image 3">
                 <h3>Ex Machina</h3>
-                <p>Author</p>
+                <p>Movie</p>
             </div>
             <!-- 더 많은 아이템을 추가할 수 있습니다 -->
         </div>
     </div>
+
+    <br><br>
+    <h2>What is Cyberpunk?</h2>
+    <hr class="Left_liner">
+    <iframe width="580" height="315" src="https://www.youtube.com/embed/-8bayOKcN64?si=KXjGQgi5bEBpw8V4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; controls" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 </body>
