add more contents, that s all

--- a/assignment3/src/honesty.html
+++ b/assignment3/src/honesty.html
@@ -13,8 +13,8 @@
 
   Include proper links, citations, references, etc to any material you have used in the site.
 
-  Name: Your Name Here...
+  Name: KYOJUNG KIM
 
-  Dated: Date Here...
+  Dated: 2024/05/30
 
 -->
